[package]
name = "better-blockmap-wasm"
description = "Wasm wrapper around better-blockmap"
version = "0.1.0"
edition = "2021"
authors = ["Fedor Indutny <fedor@indutny.com>"]
repository = "https://github.com/indutny/better-blockmap-wasm"
license = "MIT"
keywords = ["rabin","fingerprint","hash","blockmap"]
categories = ["cryptography"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
better-blockmap = "^2.0.0"
base64 = "0.13.0"
wasm-bindgen = "0.2.63"

[profile.release]
opt-level = "s"
